<resources>
    <string name="app_name">Sarah\'s Creamery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_ID">5E03C509-5CE5-4755-FF57-6D126E0C6200</string>
    <string name="app_key">2BBF11EE-D877-4B1F-FFFA-9770C2413B00</string>
    <string name="action_settings">Settings</string>
    <string name="login_signup">Login or Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="start_date_hint">Start Date:</string>
    <string name="end_date_hint">End Date:</string>
    <string name="birthday">Birthday</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="authentication_error_title">User Authentication Error!</string>
    <string name="empty_field_signup_error">Be sure you have entered a valid email address, password(6 characters minimum), and name, and birthdate.</string>
    <string name="login">Login</string>
    <string name="sign_up">Register</string>
    <string name="input_birthday">Enter your birthday (used for a free birthday sundae)</string>
    <string name="Hello">Hello</string>
    <string name="Logout">Logout</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="update_user_info">Update Info</string>
    <string name="update">Click here to update your account info.</string>
    <string name="_cancel_update">Cancel</string>
    <string name="your_account_info">user_info_title</string>
    <string name="your_account_inf">Your Account Info</string>
    <string name="flavor">Enter new flavor\'s name</string>
    <string name="add_new_flavor">Add New Flavor</string>
    <string name="add_flavor">New Flavor</string>
    <string name="action_delete">Delete</string>
    <string name="flavor_title">Our Delicious Flavors!</string>
    <string name="add_reward">New Reward</string>
    <string name="reward_name">Reward Name</string>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">Cognito Identity</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="pick_MFA">MFA Options</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about">Copyright 2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.\n\nLicensed under the Amazon Software License (the "License").\nYou may not use this file except in compliance with the License.\nA copy of the License is located at\n\nhttp://aws.amazon.com/asl/
\n\nor in the "license" file accompanying this app. This app is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="more_info">This is a sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_choose_mfa">ChooseMFA</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_add_attribute">AddAttributeActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="add_new_reward">Add New Reward</string>
    <string name="reward_descr_name">Reward Description</string>
    <string name="reward_directions_name">Cashier Instructions</string>
    <string name="reward">Rewards</string>
    <string name="rewards_title">Your Rewards and Offers!</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="caution">Do not generate code until you are ready to scan, it will expire in one minute.</string>
    <string name="warning">Warning!</string>
    <string name="warning_text">By pressing redeem you understand your QR code will expire in 1 minute.</string>
    <string name="qr_redeem">Redeem</string>
    <string name="qr_cancel">Cancel</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_code">Enter Confirmation Code</string>
    <string name="code_hint">code</string>
    <string name="code_confirm_hint">Enter Confirmation Code</string>
    <string name="code_confirm">Enter Code:</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="verify_account">Verify account</string>
    <string name="about_app">About</string>

</resources>
