<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@color/colorAccent"
                android:padding="16dp"
                android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_reward"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/new_reward_header"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/new_reward_header"
        android:layout_marginBottom="15dp"
        android:inputType="textCapWords"
        android:textCursorDrawable="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:hint="@string/reward_name"
        android:id="@+id/new_reward_et"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/new_reward_et"
        android:layout_marginBottom="15dp"
        android:inputType="textCapWords"
        android:textCursorDrawable="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:hint="@string/reward_descr_name"
        android:id="@+id/new_reward_desccription_et"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="15dp"
        android:inputType="textCapWords"
        android:textCursorDrawable="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:hint="@string/reward_directions_name"
        android:id="@+id/new_reward_directions_et"
        android:layout_below="@+id/new_reward_desccription_et"

        />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/new_reward_btn"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:text="@string/add_new_reward"
        android:layout_below="@+id/new_reward_directions_et"/>

</RelativeLayout>