<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
                android:background="@color/colorAccent"
                android:padding="16dp"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_flavor"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"

        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/new_flavor_header"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/new_flavor_header"
        android:layout_marginBottom="15dp"
        android:inputType="textCapWords"
        android:textCursorDrawable="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:hint="@string/flavor"
        android:id="@+id/new_flavor_et"

        />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/new_flavor_btn"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:text="@string/add_new_flavor"
        android:layout_below="@+id/new_flavor_et"/>

</RelativeLayout>