<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                android:padding="10dp"
              android:layout_width="wrap_content"
                android:background="@color/colorAccent"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30dp"
        android:id="@+id/code_title"
        android:paddingBottom="30dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/enter_code"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_confirm"
        android:paddingTop="15dp"
        android:inputType="text"
        android:id="@+id/code_confirm"
        android:textCursorDrawable="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_below="@+id/code_title"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textSize="20dp"
        android:textColor="@color/colorAccent"
        android:text="@string/submit"
        android:layout_below="@+id/code_confirm"
        android:padding="10dp"
        android:id="@+id/confirm_btn"/>

</RelativeLayout>